data/style.css
html, body {
	height: 100%;
}

html {
	display: table;
	margin: auto;
}

body {
	display: table-cell;
	vertical-align: middle;
	color: #FFF;
	background-color: #111;
}

button {
	font-family: 'electrolize';
	font-size: inherit;
    border-radius: 10%;
}

#settings {
	border: 2px outset yellow;
	background-color: #222;
  	text-align: center;
}

#status {
	border: 2px outset lightgreen;
	background-color: #181818;
	display: flex;
	justify-content: center;
}

.status_table {
	font-family: 'electrolize';
	padding: 10px;
	align-self: center;
	font-size: inherit;
}

.status_text {
	white-space: nowrap;
}

.status_value {
	white-space: nowrap;
	justify-content: right;
}

#usage_title {
    font-family: 'electrolize';
    align-self: center;
    padding: 20px;
    font-size: 250%;
    text-align: center;
}

#mode_usage {
	outline: thick double purple;
	background-color: #181818;
}

#usage {
	display: flex;
	justify-content: center;
}

.usage_table {
	font-family: 'electrolize';
	padding: 20px;
    width: 80%;
	align-self: center;
	font-size: inherit;
}

.usage_text {
	white-space: nowrap;
}

#set_table {
	font-family: 'electrolize';
	font-size: inherit;
	width: 100%;
}

#expert_controls {
	font-family: 'electrolize';
	display: flex;
	justify-content: center;
}

#expert_table {
	align-self: center;
	font-size: inherit;
}

.range {
	font-size: inherit;
	font-family: inherit;
}

button.large	{background-color: #C55; color: #FFF;}
button.medium 	{background-color: #AA0; color: #FFF;}
button.small 	{background-color: #0A0; color: #FFF;}
button.disabled {background-color: #555; color: #444;}

button.halt 		{background-color: #800; color: #FFF;}
button.deenergize 	{background-color: #F80; color: #000;}
button.resume 		{background-color: #080; color: #111;}
button.demo 		{background-color: #08A; color: #FFF;}
button.now			{background-color: #0F0; color: #111;}
button.resetnow 	{background-color: #F00; color: #FFF;}
button.reboot 		{background-color: #F00; color: #FF0;}
button.shutdown     {background-color: #111; color: #F00;}
button.swupdate		{background-color: #BBB; color: #000;}

button.apply 	{background-color: yellow; color: black;}

#expert_buttons {
	width: 100%;
	text-align: center;
}

#admin_buttons {
	width: 100%;
	text-align: center;
}

#time_travel {
	width: 100%;
	text-align: center;
	position: relative;
	z-index: 0;
	display: none;
	background-color: #001281;
	border: 3px outset #314efb;
	border-radius: 12px;
}

#date {
	font-family: electrolize;
	font-size: 175%;
}

#travel {
	background-color: #8c03fc;
	color: white;
	font-family: electrolize;
	font-size: 175%;
}

#now {
	background-color: #00ff00;
	color: black;
	font-family: electrolize;
	font-size: 175%;
}

#icon-orrery img {
	position: absolute;
	top: 8px;
	right: 8px;
	width: 64px;
	height: 64px;
}

#icon-expert img {
	position: absolute;
	top: 108px;
	right: 8px;
	width: 64px;
	height: 64px;
}

#icon-usage img {
    position: absolute;
    top: 208;
    right: 8px;
    width: 64px;
    height: 64px;
}

#icon-admin img {
	position: absolute;
	top: 308px;
	right: 8px;
	width: 64px;
	height: 64px;
}

#icon-settings img {
    position: absolute;
    top: 408;
    right: 8px;
    width: 64px;
    height: 64px;
}

#icon-usage img {
    position: absolute;
    top: 208;
    right: 8px;
    width: 64px;
    height: 64px;
}

.icon-selected {
	opacity: .2;
}

#speed_title {
	font-size: 125%;
	font-family: electrolize;
	text-align: center;
}

#speed_slider {
	text-align: center;
}

.slider {
	width: 80%;
}

#orrery_time {
	font-size: 300%;
	font-family: "D14MR";
	text-align: center;
    outline: thick double black;
}

#time_to_destination {
	font-size: 100%;
	font-family: "Electrolize";
	text-align: center;
}

.image	{font-family: "Electrolize"; text-align: center;}
.name 	{font-family: "Electrolize"; text-align: left;}
.angle	{font-family: "Electrolize"; text-align: right;}
.doy 	{font-family: "Electrolize"; text-align: right;}

